Create EventEntity and EventService

--- a/mywebsite/src/main/webapp/index.xhtml
+++ b/mywebsite/src/main/webapp/index.xhtml
@@ -17,10 +17,16 @@
 				</ul>
 			</div>
 			<div class="content">
-				<h1></h1>
-				<p>Bratwurst ist ein von DualDuo.inc gegründetes Start up Projekt. Hier bieten Gamer Lanpartys an für die du dich
-				anmelden kannst. Natürlich kannst auch du eigene Partys ausschreiben.
+				<h1>Welcome to the Sizzy Project</h1>
+				<p>
+					Vernetze dich mit tausenden Spielern in deiner Umgebung und messe dich in großen Wetttkämpfen mit anderen Spielern in deinem Lieblingsspiel.<br/>
+					Oder genieße fantastische Rollenspielwelten gemeinsamm mit Freunden und Fremden aus dem Internet.<br/>
+					Melde dich jetzt beim Sizzy Project an und werde teil einer wachsenden Internetcommunity.
 				</p> 
+				<div>
+					<button type="button">Anstehende Evente</button>
+					<button type="button">Mehr Informationen</button>
+				</div>
 			</div>
 		</div>
 	</h:body>
