--- a/mywebsite/src/main/webapp/createEvent.xhtml
+++ b/mywebsite/src/main/webapp/createEvent.xhtml
@@ -1,11 +1,28 @@
 <html lang="en"
 	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 	<h:head>
 		<title>Event ausschreiben</title>
 		<link rel="stylesheet" type="text/css" href="creteEvent-style.css"/>
 	</h:head>
 	<h:body>
-		
+		<h:form>
+			Event Name: <h:inputText id="eventName" value="#{createEventBean.eventModel.eventName}"  lable="EventName" required="true" requiredMessage="Bitte geben sie einen gültien Namen ein"/>
+			<br/><br/>
+			Ort: <h:inputText id="location" value="#{createEventBean.eventModel.location}" lable="Location" required="true" requiredMessage="Das ist kein gültiger Ort"/>
+			<br/><br/>
+			Spiel: <h:inputText id="game" value="#{createEventBean.eventModel.game}"  lable="Game" required="true" requiredMessage="Das ist kein gültiges Spiel"/>
+			<br/><br/>
+			Maximale Spieler: <h:inputText id="maxPlayer" value="#{createEventBean.eventModel.maxPlayer}" label="Max Player" required="false"/>
+			<br/><br/>
+			Datum: <p:datePicker id="popup" value="#{createEventBean.eventModel.date}"/>
+			<br/><br/>
+			Angemeldete Spieler: <h:inputText id="registeretPlayers" value="#{createEventBean.eventModel.registeredPlayers}" lable="Registeret Players" required="true" requiredMessage="Das ist eine ungültige Spieler Zahl"/>
+			<br/><br/>
+			<h:commandButton value="Bestätigen" action="#{createEventBean.createEvent}"/>
+		</h:form>
 	</h:body>
 </html>
