--- a/mywebsite/src/main/webapp/index.xhtml
+++ b/mywebsite/src/main/webapp/index.xhtml
@@ -24,7 +24,7 @@
 					Melde dich jetzt beim Sizzy Project an und werde teil einer wachsenden Internetcommunity.
 				</p> 
 				<div>
-					<button type="button">Anstehende Evente</button>
+					<button type="button">Anstehende Events</button>
 					<button type="button">Mehr Informationen</button>
 				</div>
 			</div>
