--- a/mywebsite/src/main/webapp/createEvent.xhtml
+++ b/mywebsite/src/main/webapp/createEvent.xhtml
@@ -3,26 +3,42 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 	<h:head>
 		<title>Event ausschreiben</title>
-		<link rel="stylesheet" type="text/css" href="creteEvent-style.css"/>
+		<link rel="stylesheet" type="text/css" href="createEvent-style.css"/>
 	</h:head>
 	<h:body>
-		<h:form>
-			Event Name: <h:inputText id="eventName" value="#{createEventBean.eventModel.eventName}"  lable="EventName" required="true" requiredMessage="Bitte geben sie einen gültien Namen ein"/>
-			<br/><br/>
-			Ort: <h:inputText id="location" value="#{createEventBean.eventModel.location}" lable="Location" required="true" requiredMessage="Das ist kein gültiger Ort"/>
-			<br/><br/>
-			Spiel: <h:inputText id="game" value="#{createEventBean.eventModel.game}"  lable="Game" required="true" requiredMessage="Das ist kein gültiges Spiel"/>
-			<br/><br/>
-			Maximale Spieler: <h:inputText id="maxPlayer" value="#{createEventBean.eventModel.maxPlayer}" label="Max Player" required="false"/>
-			<br/><br/>
-			Datum: <p:datePicker id="popup" value="#{createEventBean.eventModel.date}"/>
-			<br/><br/>
-			Angemeldete Spieler: <h:inputText id="registeretPlayers" value="#{createEventBean.eventModel.registeredPlayers}" lable="Registeret Players" required="true" requiredMessage="Das ist eine ungültige Spieler Zahl"/>
-			<br/><br/>
-			<h:commandButton value="Bestätigen" action="#{createEventBean.createEvent}"/>
-		</h:form>
+		<div class="container">
+			<div class="title">Event erstellen</div>
+			<h:form action="#">
+				<div class="input-detail">
+					<div class="input-box">
+						<span class="details">Eventname</span>
+						<h:inputText id="eventName" value="#{createEventBean.eventModel.eventName}" lable="Event Name" required="true" requiredMessage="Dieser Name ist ungültig" a:placeholder="Eventnamen eingeben"/>
+					</div>
+					<div class="input-box">
+						<span class="details">Ort</span>
+						<h:inputText id="location" value="#{createEventBean.eventModel.location}" lable="Ort" required="true" requiredMessage="Dieser Ort ist ungültig" a:placeholder="Austragungsort eingeben"/>
+					</div>
+					<div class="input-box">
+						<span class="details">Datum</span>
+						<p:datePicker value="#{createEventBean.eventModel.date}"/>
+					</div>
+					<div class="input-box">
+						<span class="details">Spiel</span>
+						<h:inputText id="game" value="#{createEventBean.eventModel.game}" lable="Spiel" required="true" requiredMessage="Dieses Spiel ist ungültig" a:placeholder="Spiel auswählen"/>
+					</div>
+					<div class="input-box">
+						<span class="details">Max. Spielerzahl</span>
+						<h:inputText id="maxPlayers" value="#{createEventBean.eventModel.maxPlayer}" lable="Max Spieler" required="false" a:placeholder="Leer lassen für unbegrenzt"/>
+					</div>
+				</div>
+				<div class="button">
+					<h:commandButton value="Bestätigen" action="#{createEventBean.createEvent}"/>
+				</div>
+			</h:form>
+		</div>
 	</h:body>
 </html>
