--- a/mywebsite/src/main/webapp/welcome.xhtml
+++ b/mywebsite/src/main/webapp/welcome.xhtml
@@ -16,5 +16,6 @@
 			</ui:repeat>
 		</ul>
 		<a href="createEvent.xhtml">Event Erstellen</a>
+		<a href="signUpForEvent.xhtml">Alle Events</a>
 	</h:body>
 </html>
