fixed createEvent design

--- a/mywebsite/src/main/webapp/createEvent.xhtml
+++ b/mywebsite/src/main/webapp/createEvent.xhtml
@@ -35,8 +35,8 @@
 						<h:inputText id="maxPlayers" value="#{createEventBean.eventModel.maxPlayer}" lable="Max Spieler" required="false" a:placeholder="Leer lassen für unbegrenzt"/>
 					</div>
 				</div>
-				<div class="button">
-					<h:commandButton value="Bestätigen" action="#{createEventBean.createEvent}"/>
+				<div class="buttonbox">
+					<h:commandButton class="button" value="Bestätigen" action="#{createEventBean.createEvent}"/>
 				</div>
 			</h:form>
 		</div>
