moved css and images

--- a/mywebsite/src/main/webapp/login.xhtml
+++ b/mywebsite/src/main/webapp/login.xhtml
@@ -4,7 +4,7 @@
 	xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 	<h:head>
 		<title>Login</title>
-		<link rel="stylesheet" type="text/css" href="login-style.css"/>
+		<link rel="stylesheet" type="text/css" href="resources/css/login-style.css"/>
 	</h:head>
 	<h:body>
 		<div class="loginbox">
