--- a/mywebsite/src/main/webapp/registration.xhtml
+++ b/mywebsite/src/main/webapp/registration.xhtml
@@ -4,7 +4,7 @@
 	xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 	<h:head>
 		<title>Registrieren</title>
-		<link rel="stylesheet" type="text/css" href="registration-style.css"/>
+		<link rel="stylesheet" type="text/css" href="resources/css/registration-style.css"/>
 	</h:head>
 	<h:body>
 		<div class="registrationbox">
