--- a/mywebsite/src/main/webapp/createEvent.xhtml
+++ b/mywebsite/src/main/webapp/createEvent.xhtml
@@ -7,7 +7,7 @@
 	xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 	<h:head>
 		<title>Event ausschreiben</title>
-		<link rel="stylesheet" type="text/css" href="createEvent-style.css"/>
+		<link rel="stylesheet" type="text/css" href="resources/css/createEvent-style.css"/>
 	</h:head>
 	<h:body>
 		<div class="container">
