--- a/mywebsite/src/main/webapp/index.xhtml
+++ b/mywebsite/src/main/webapp/index.xhtml
@@ -3,12 +3,12 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	<h:head>
 		<title>DualDuo</title>
-		<link rel="stylesheet" type="text/css" href="index-style.css"/>
+		<link rel="stylesheet" type="text/css" href="resources/css/index-style.css"/>
 	</h:head>
 	<h:body>
 		<div class="banner">
 			<div class="navbar">
-				<img src="Logo.png" class="logo"/>
+				<img src="resources/images/Logo.png" class="logo"/>
 				<ul>
 					<li><a href="ueberUns.xhtml">Über uns</a></li>
 					<li><a href="kontakt.xhtml">Kontakt</a></li>
