--- a/mywebsite/src/main/webapp/login.xhtml
+++ b/mywebsite/src/main/webapp/login.xhtml
@@ -8,7 +8,7 @@
 	</h:head>
 	<h:body>
 		<div class="loginbox">
-			<img src="login-avatar.png" class="avatar"/>
+			<img src="resources/images/login-avatar.png" class="avatar"/>
 			<h1>Login</h1>
 			<h:form>
 				<p>Benutzername</p>
