--- a/mywebsite/src/main/webapp/welcome.xhtml
+++ b/mywebsite/src/main/webapp/welcome.xhtml
@@ -9,10 +9,11 @@
 	<h:body>
 		<div class="container">
 			<div class="headbar">
+			<span>Irgendwas</span>
 				<ul>
 					<li><a href="signUpForEvent.xhtml">Events</a></li>
 					<li><a href="createEvent.xhtml">Event erstellen</a></li>
-					<li><h:outputText id="username">#{userModel.username}</h:outputText></li>
+					<li><h:outputText id="username" value="#{userModel.username}"/></li>
 				</ul>
 			</div>
 			<div class="mainbox">
