--- a/mywebsite/src/main/webapp/welcome.xhtml
+++ b/mywebsite/src/main/webapp/welcome.xhtml
@@ -13,7 +13,7 @@
 				<ul>
 					<li><a href="signUpForEvent.xhtml">Events</a></li>
 					<li><a href="createEvent.xhtml">Event erstellen</a></li>
-					<li><h:outputText id="username" value="#{userModel.username}"/></li>
+<!-- 					<li><h:outputText id="username" value="#{userModel.username}"/></li> -->
 				</ul>
 			</div>
 			<div class="mainbox">
