--- a/mywebsite/src/main/webapp/welcome.xhtml
+++ b/mywebsite/src/main/webapp/welcome.xhtml
@@ -1,34 +1,65 @@
-<html lang="en"
-	xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-	<h:head>
-		<title>Willkommen</title>
-		<link rel="stylesheet" type="text/css" href="resources/css/welcome-style.css"/>
-	</h:head>
-	<h:body>
-		<div class="container">
-			<div class="navbar">
-				<img src="resources/images/Logo.png" class="logo"/>
-				<ul>
-					<li><a href="signUpForEvent.xhtml">Events</a></li>
-					<li><a href="createEvent.xhtml">Event Erstellen</a></li>
-					<li>
-						<h:form>
-							<p:panelMenu style="width: 300px">
-								<p:submenu lable="#{welcomeBean.userModel.username}">
-									<p:menuitem value="Abmelden" action="#{welcomeBean.signOut}" ajax="false" icon="sign-out"/>
-								</p:submenu>
-							</p:panelMenu>
-						</h:form>
-					</li>
-				</ul>
-			</div>
-			<div class="mainbox">
-				
+<h:head>
+	<title>Willkommen</title>
+	<link rel="stylesheet" type="text/css"
+		href="resources/css/welcome-style.css" />
+</h:head>
+<h:body>
+	<div class="container">
+		<div class="navbar">
+			<img src="resources/images/Logo.png" class="logo" />
+			<ul>
+				<li><a href="signUpForEvent.xhtml">Events</a></li>
+				<li><a href="createEvent.xhtml">Event Erstellen</a></li>
+				<li><h:outputLabel value="#{welcomeBean.userModel.username}"
+						class="username" /></li>
+			</ul>
+		</div>
+		<div class="mainbox">
+			<div class="events">
+				<h:form>
+					<p:dataView var="event" value="#{welcomeBean.list}"
+						gridIcon="pi pi-th-large" listIcon="pi pi-bars">
+						<p:dataViewListItem>
+							<h:panelGrid columns="3" style="width:100%"
+								columnClasses="five-percent, eightyfive-percent, ten-percent">
+								<p:graphicImage />
+
+								<p:outputPanel>
+									<h:panelGrid columns="2" cellpadding="5">
+										<h:outputText value="Name:" />
+										<h:outputText value="#{event.eventName}"
+											style="font-weight: bold" />
+
+										<h:outputText value="Ort:" />
+										<h:outputText value="#{event.location}"
+											style="font-weight: bold" />
+
+										<h:outputText value="Datum:" />
+										<h:outputText value="#{event.date}" style="font-weight: bold" />
+
+										<h:outputText value="Spiel:" />
+										<h:outputText value="#{event.game}" style="font-weight: bold" />
+
+										<h:outputText value="Belegte Plätze:" />
+										<h:outputText
+											value="#{event.registeredPlayers}/#{event.maxPlayer}"
+											style="font-weight: bold" />
+
+										<h:outputText value="Ersteller:" />
+										<h:outputText value="#{event.host}" style="font-weight: bold" />
+									</h:panelGrid>
+								</p:outputPanel>
+							</h:panelGrid>
+						</p:dataViewListItem>
+					</p:dataView>
+				</h:form>
 			</div>
 		</div>
-	</h:body>
+	</div>
+</h:body>
 </html>
