--- a/mywebsite/src/main/webapp/welcome.xhtml
+++ b/mywebsite/src/main/webapp/welcome.xhtml
@@ -15,7 +15,7 @@
 			<ul>
 				<li><a href="signUpForEvent.xhtml">Events</a></li>
 				<li><a href="createEvent.xhtml">Event Erstellen</a></li>
-				<li><h:outputLabel value="#{welcomeBean.userModel.username}"
+				<li><h:outputLabel value="#{welcomeBean.user.username}"
 						class="username" /></li>
 			</ul>
 		</div>
