--- a/mywebsite/src/main/webapp/welcome.xhtml
+++ b/mywebsite/src/main/webapp/welcome.xhtml
@@ -23,7 +23,7 @@
 			<div class="events">
 				<h:form>
 					<p:dataView var="event" value="#{welcomeBean.list}"
-						gridIcon="pi pi-th-large" listIcon="pi pi-bars">
+						gridIcon="pi pi-th-large" listIcon="pi pi-bars" emptyMessage="Du bist bei keinem Event dabei">
 						<p:dataViewListItem>
 							<h:panelGrid columns="3" style="width:100%"
 								columnClasses="five-percent, eightyfive-percent, ten-percent">
