--- a/mywebsite/src/main/webapp/welcome.xhtml
+++ b/mywebsite/src/main/webapp/welcome.xhtml
@@ -15,8 +15,8 @@
 			<ul>
 				<li><a href="signUpForEvent.xhtml">Events</a></li>
 				<li><a href="createEvent.xhtml">Event Erstellen</a></li>
-				<li><h:outputLabel value="#{welcomeBean.user.username}"
-						class="username" /></li>
+				<li><a href="ownEvents.xhtml"><h:outputLabel value="#{welcomeBean.user.username}"
+						class="username" /></a></li>
 			</ul>
 		</div>
 		<div class="mainbox">
