--- a/mywebsite/src/main/webapp/welcome.xhtml
+++ b/mywebsite/src/main/webapp/welcome.xhtml
@@ -21,6 +21,7 @@
 		</div>
 		<div class="mainbox">
 			<div class="events">
+			<p:outputLabel rendered="#{welcomeBean.isSignedUp()}" style="font-size: 40px; color: #fb2525; margin-left: 33.33%;">Das wartet auf dich</p:outputLabel>
 				<h:form>
 					<p:dataView var="event" value="#{welcomeBean.list}"
 						gridIcon="pi pi-th-large" listIcon="pi pi-bars" emptyMessage="Du bist bei keinem Event dabei">
