--- a/mywebsite/src/main/webapp/welcome.xhtml
+++ b/mywebsite/src/main/webapp/welcome.xhtml
@@ -15,16 +15,28 @@
 			<ul>
 				<li><a href="signUpForEvent.xhtml">Events</a></li>
 				<li><a href="createEvent.xhtml">Event Erstellen</a></li>
-				<li><a href="ownEvents.xhtml"><h:outputLabel value="#{welcomeBean.user.username}"
-						class="username" /></a></li>
+				<li><h:outputLabel value="#{welcomeBean.user.username}" /> 
+					<h:form>
+						<p:growl id="messages" showDetail="true"/>
+
+        				<p:contextMenu event="click contextmenu">
+							<p:menuitem value="Eigene Events" action="#{welcomeBean.ownEvents}"
+								update="messages" icon="pi pi-list" />
+							<p:menuitem value="Logout" action="#{welcomeBean.logout}"
+								update="messages" icon="pi pi-sign-out" />
+						</p:contextMenu>
+					</h:form>
+				</li>
 			</ul>
 		</div>
 		<div class="mainbox">
 			<div class="events">
-			<p:outputLabel rendered="#{welcomeBean.isSignedUp()}" style="font-size: 40px; color: #fb2525; margin-left: 33.33%;">Das wartet auf dich</p:outputLabel>
+				<p:outputLabel rendered="#{welcomeBean.isSignedUp()}"
+					style="font-size: 40px; color: #fb2525; margin-left: 33.33%;">Das wartet auf dich</p:outputLabel>
 				<h:form>
 					<p:dataView var="event" value="#{welcomeBean.list}"
-						gridIcon="pi pi-th-large" listIcon="pi pi-bars" emptyMessage="Du bist bei keinem Event dabei">
+						gridIcon="pi pi-th-large" listIcon="pi pi-bars"
+						emptyMessage="Du bist bei keinem Event dabei">
 						<p:dataViewListItem>
 							<h:panelGrid columns="3" style="width:100%"
 								columnClasses="five-percent, eightyfive-percent, ten-percent">
