--- a/mywebsite/src/main/webapp/signUpForEvent.xhtml
+++ b/mywebsite/src/main/webapp/signUpForEvent.xhtml
@@ -13,7 +13,21 @@
 			<a href="welcome.xhtml"><img src="resources/images/Logo.png" class="logo"/></a>
 			<ul>
 				<li><a href="createEvent.xhtml">Event Erstellen</a></li>
-				<li><h:outputLabel value="#{signUpForEventBean.userModel.username}" class="username"/></li>
+				<li>
+					<div>
+						<h:form>
+							<p:growl id="messages" showDetail="true" />
+
+							<p:menuButton value="#{signUpForEventBean.userModel.username}">
+								<p:menuitem value="Eigene Events"
+									action="#{welcomeBean.ownEvents}" update="messages"
+									icon="pi pi-list" />
+								<p:menuitem value="Logout" action="#{welcomeBean.logout}"
+									update="messages" icon="pi pi-sign-out" />
+							</p:menuButton>
+						</h:form>
+					</div>
+				</li>
 			</ul>
 		</div>
 			<h:form id="form">
