--- a/mywebsite/src/main/webapp/adminPanelSidebar.xhtml
+++ b/mywebsite/src/main/webapp/adminPanelSidebar.xhtml
@@ -7,8 +7,8 @@
 	<h:form>
 		<ul style="list-style: none">
 			<li><h:commandLink value="Nutzer Bannen" action="banUser.xhtml" /></li>
-			<li><h:commandLink value="Event Entfernen"
-					action="deleteEvent.xhtml" /></li>
+			<li><h:commandLink value="Event Entfernen" action="deleteEvent.xhtml"/></li>
+			<li><h:commandLink value="Rollen Verwaltung" action="managePermissions.xhtml"/></li>
 		</ul>
 	</h:form>
 </h:body>
