--- a/mywebsite/src/main/webapp/allEvents.xhtml
+++ b/mywebsite/src/main/webapp/allEvents.xhtml
@@ -14,7 +14,8 @@
 			<a href="index.xhtml"><img src="resources/images/Logo.png"
 				class="logo" /></a>
 			<ul>
-				<li><a href="kontakt.xhtml">Kontakt</a></li>
+				<li><a href="impressum.xhtml">Impressum</a></li>
+				<li><a href="personal.xhtml">Projekt Leiter</a></li>
 				<li><a href="registration.xhtml" class="regbutton">Registrieren</a></li>
 				<li><a href="login.xhtml" class="loginbutton">Login</a></li>
 			</ul>
