--- a/mywebsite/src/main/webapp/createEvent.xhtml
+++ b/mywebsite/src/main/webapp/createEvent.xhtml
@@ -27,13 +27,16 @@
 									icon="pi pi-list" />
 								<p:menuitem value="Logout" action="#{welcomeBean.logout}"
 									update="messages" icon="pi pi-sign-out" />
+								<p:menuitem value="Admin Panel"
+									action="#{welcomeBean.adminPanel}" update="messages"
+									icon="pi pi-key" />
 							</p:menuButton>
 						</h:form>
 					</div>
 				</li>
 			</ul>
 		</div>
-			<div class="main">
+		<div class="main">
 			<div class="container">
 				<div class="title">Event erstellen</div>
 				<h:form action="#">
@@ -44,32 +47,32 @@
 								value="#{createEventBean.eventModel.eventName}"
 								lable="Event Name" required="true"
 								requiredMessage="Dieser Name ist ungültig"
-								a:placeholder="Eventnamen eingeben" class="boxes"/>
+								a:placeholder="Eventnamen eingeben" class="boxes" />
 						</div>
 						<div class="input-box">
 							<span class="details">Ort</span>
 							<h:inputText id="location"
 								value="#{createEventBean.eventModel.location}" lable="Ort"
 								required="true" requiredMessage="Dieser Ort ist ungültig"
-								a:placeholder="Austragungsort eingeben" class="boxes"/>
+								a:placeholder="Austragungsort eingeben" class="boxes" />
 						</div>
 						<div class="input-box">
 							<span class="details">Datum</span>
-							<p:datePicker value="#{createEventBean.eventModel.date}"/>
+							<p:datePicker value="#{createEventBean.eventModel.date}" />
 						</div>
 						<div class="input-box">
 							<span class="details">Spiel</span>
 							<h:inputText id="game" value="#{createEventBean.eventModel.game}"
 								lable="Spiel" required="true"
 								requiredMessage="Dieses Spiel ist ungültig"
-								a:placeholder="Spiel auswählen" class="boxes"/>
+								a:placeholder="Spiel auswählen" class="boxes" />
 						</div>
 						<div class="input-box">
 							<span class="details">Max. Spielerzahl</span>
 							<h:inputText id="maxPlayers"
 								value="#{createEventBean.eventModel.maxPlayer}"
 								lable="Max Spieler" required="false"
-								a:placeholder="Leer lassen für unbegrenzt" class="boxes"/>
+								a:placeholder="Leer lassen für unbegrenzt" class="boxes" />
 						</div>
 					</div>
 					<div class="buttonbox">
@@ -78,7 +81,7 @@
 					</div>
 				</h:form>
 			</div>
-		</div>	
+		</div>
 	</div>
 </h:body>
 </html>
