--- a/mywebsite/src/main/webapp/index.xhtml
+++ b/mywebsite/src/main/webapp/index.xhtml
@@ -10,8 +10,8 @@
 			<div class="navbar">
 				<img src="resources/images/Logo.png" class="logo"/>
 				<ul>
-					<li><a href="ueberUns.xhtml">Über uns</a></li>
-					<li><a href="kontakt.xhtml">Kontakt</a></li>
+					<li><a href="impressum.xhtml">Impressum</a></li>
+					<li><a href="personal.xhtml">Projekt Leitung</a></li>
 					<li><a href="registration.xhtml" class="regbutton">Registrieren</a></li>
 					<li><a href="login.xhtml" class="loginbutton">Login</a></li>
 				</ul>
@@ -24,8 +24,8 @@
 					Melde dich jetzt beim Sizzy Project an und werde teil einer wachsenden Internetcommunity.
 				</p> 
 			<div>
-					<button type="button" onclick="window.location.href = 'allEvents.xhtml'">Anstehende Events</button>
-					<button type="button">Mehr Informationen</button>
+					<button type="button" onclick="window.location.href = 'allEvents.xhtml'"><span></span>Anstehende Events</button>
+					<button type="button" onclick="window.location.href = 'manual.xhtml'"><span></span>Mehr Informationen</button>
 				</div>
 			</div>
 		</div>
