--- a/mywebsite/src/main/webapp/banned.xhtml
+++ b/mywebsite/src/main/webapp/banned.xhtml
@@ -9,6 +9,7 @@
 		<div class="mainbox">
 			<img src="resources/images/ban-hammer.png" class="image"/>
 			<H1 class="text">You are banned from the Network</H1>
+			<h:outputText value="#{bannedBean.reason}" class="message"/>
 		</div>
 	</h:body>
 </html>
