--- a/mywebsite/src/main/webapp/ownEvents.xhtml
+++ b/mywebsite/src/main/webapp/ownEvents.xhtml
@@ -24,9 +24,9 @@
 							<p:menuButton value="#{ownEventsBean.user.username}">
 								<p:menuitem value="Logout" action="#{welcomeBean.logout}"
 									update="messages" icon="pi pi-sign-out" />
-								<p:menuitem value="Admin Panel"
-									action="#{welcomeBean.adminPanel}" update="messages"
-									icon="pi pi-key" />
+								<p:menuitem rendered="#{welcomeBean.isAdmin()}"
+									value="Admin Panel" action="#{welcomeBean.adminPanel}"
+									update="messages" icon="pi pi-key" />
 							</p:menuButton>
 						</h:form>
 					</div>
