--- a/mywebsite/src/main/webapp/signUpForEvent.xhtml
+++ b/mywebsite/src/main/webapp/signUpForEvent.xhtml
@@ -81,7 +81,7 @@
 						<p:graphicImage />
 
 						<p:outputPanel>
-							<h:panelGrid columns="2" cellpadding="5">
+							<h:panelGrid columns="2" cellpadding="5" style="color: #fff;">
 								<h:outputText value="Name:" />
 								<h:outputText value="#{event.eventName}"
 									style="font-weight: bold" />
